inserito bottone luci

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	 <script src="index.js"> </script>
   </head>
   <body>
-    <p> Questa e una prova </p>
+ 
+    <button id="interruttore"> Accendi/Spegni luci </button>
+    <div id="visualizzaInterruttore"> Luci Spente </div> 	
+
+
   </body>
 </html>
