--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Welcome to Firebase Hosting</title>
     <link rel="stylesheet" href="index.css">
-	 <script src="index.js"> </script>
   </head>
   <body>
  
-    <button id="interruttore"> Accendi/Spegni luci </button>
+    <button type="button" id="interruttore"> Accendi/Spegni luci </button>
     <div id="visualizzaInterruttore"> Luci Spente </div> 	
-
-
+   
+  <script src="index.js"></script>
   </body>
 </html>
