--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
  
     <button type="button" id="interruttore"> Accendi/Spegni luci </button>
     <div id="visualizzaInterruttore">Luci Spente</div> 	
-      <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js" gapi_processed="true"></script> 
+	<button type="button" id="motore">Accendi/Spegni pompa</button>
+	<div id="visualizzaMotore">Motore Spento</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js" gapi_processed="true"></script> 
   <script src="index.js"></script>
   </body>
 </html>
