aggiunta cartella script + divisione js

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	
 	
   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js" gapi_processed="true"></script> 
-  <script src="index.js"></script>
+  <script src="script/index.js"></script>
+  <script src="script/interruttore.js"></script>
   </body>
 </html>
