--- a/index.html
+++ b/index.html
@@ -9,11 +9,69 @@
  
     <button type="button" id="interruttore"> Accendi/Spegni luci </button>
     <div id="visualizzaInterruttore">Luci Spente</div> 	
-	<button type="button" id="motore">Accendi/Spegni pompa</button>
-	<div id="visualizzaMotore">Motore Spento</div>   
+    <div> <p id="luminosita"></p></div>
+    <div><p id="oraCorrente"></p></div>
+    <!-- Selezione orario inizio e fine--> 
     <div>
-          Luminosita: <input type="text" name="luce" value="" id="luminosita" />
+        Ora accensione:
+        <select id="oraInizio">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="19">19</option>
+            <option value="20">20</option>
+            <option value="21">21</option>
+            <option value="22">22</option>
+            <option value="23">23</option>
+            <option value="24">24</option>
+        </select>
     </div>
+    <div>
+        Ora spegnimento:
+        <select id="oraSpegnimento">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="19">19</option>
+            <option value="20">20</option>
+            <option value="21">21</option>
+            <option value="22">22</option>
+            <option value="23">23</option>
+            <option value="24">24</option>
+        </select>
+    </div>
+    <button type="button" id="motore">Accendi/Spegni pompa</button>
+    <div id="visualizzaMotore">Motore Spento</div>   
 	
 	
 	
@@ -27,6 +85,7 @@
   <script src="script/index.js"></script> 
   <script src="script/interruttore.js"></script>
   <script src="script/luminosita.js"></script>
+  <script src="script/orari.js"></script>
 
   </body>
 </html>
