aggiunto paragro per gli id "automatico"
aggiunti 2 paragrafi che servirano per l'output dello stato automatico o meno della pompa e delle luci, poi da sistemare in futuro con un pulsante

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
             <option value="24">24</option>
         </select>
     </div>
-   
+    <div>
+        <p id="luciAutomatiche">automatico</p>
+    </div>
+    
     <hr />
     <h3>CONTROLLO SULLA POMPA</h3>
     <button type="button" id="bottonePompa">Accendi/Spegni pompa</button>
@@ -88,6 +91,9 @@
      <div>
          <p id="sensoreLivello"></p>
      </div>
+    <div>
+        <p id="pompaAutomatica"> automatico</p>
+    </div>
 	
 	
 	
