Finita gestione Luci

--- a/index.html
+++ b/index.html
@@ -63,62 +63,66 @@
 					</div>
     <!-- Selezione orario inizio e fine--> 
 					<div>
-						Ora accensione:
-						<select id="oraInizio">
-							<option value="1">1</option>
-							<option value="2">2</option>
-							<option value="3">3</option>
-							<option value="4">4</option>
-							<option value="5">5</option>
-							<option value="6">6</option>
-							<option value="7">7</option>
-							<option value="8">8</option>
-							<option value="9">9</option>
-							<option value="10">10</option>
-							<option value="11">11</option>
-							<option value="12">12</option>
-							<option value="13">13</option>
-							<option value="14">14</option>
-							<option value="15">15</option>
-							<option value="16">16</option>
-							<option value="17">17</option>
-							<option value="18">18</option>
-							<option value="19">19</option>
-							<option value="20">20</option>
-							<option value="21">21</option>
-							<option value="22">22</option>
-							<option value="23">23</option>
-							<option value="24">24</option>
-						</select>
+						<p>
+							Ora Accensione
+							<div class="btn-group btn-group-xs" role="group" aria-label="...">
+								<button type="button" class="btn btn-primary" id="on1">1</button>
+								<button type="button" class="btn btn-primary" id="on2">2</button>
+								<button type="button" class="btn btn-primary" id="on3">3</button>
+								<button type="button" class="btn btn-primary" id="on4">4</button>
+								<button type="button" class="btn btn-primary" id="on5">5</button>
+								<button type="button" class="btn btn-primary" id="on6">6</button>
+								<button type="button" class="btn btn-primary" id="on7">7</button>
+								<button type="button" class="btn btn-primary" id="on8">8</button>
+								<button type="button" class="btn btn-primary" id="on9">9</button>
+								<button type="button" class="btn btn-primary" id="on10">10</button>
+								<button type="button" class="btn btn-primary" id="on11">11</button>
+								<button type="button" class="btn btn-primary" id="on12">12</button>
+								<button type="button" class="btn btn-primary" id="on13">13</button>
+								<button type="button" class="btn btn-primary" id="on14">14</button>
+								<button type="button" class="btn btn-primary" id="on15">15</button>
+								<button type="button" class="btn btn-primary" id="on16">16</button>
+								<button type="button" class="btn btn-primary" id="on17">17</button>
+								<button type="button" class="btn btn-primary" id="on18">18</button>
+								<button type="button" class="btn btn-primary" id="on19">19</button>
+								<button type="button" class="btn btn-primary" id="on20">20</button>
+								<button type="button" class="btn btn-primary" id="on21">21</button>
+								<button type="button" class="btn btn-primary" id="on22">22</button>
+								<button type="button" class="btn btn-primary" id="on23">23</button>
+								<button type="button" class="btn btn-primary" id="on24">24</button>
+							</div>
+						</p>						
 					</div>
 					<div>
-						Ora spegnimento:
-						<select id="oraSpegnimento">
-							<option value="1">1</option>
-							<option value="2">2</option>
-							<option value="3">3</option>
-							<option value="4">4</option>
-							<option value="5">5</option>
-							<option value="6">6</option>
-							<option value="7">7</option>
-							<option value="8">8</option>
-							<option value="9">9</option>
-							<option value="10">10</option>
-							<option value="11">11</option>
-							<option value="12">12</option>
-							<option value="13">13</option>
-							<option value="14">14</option>
-							<option value="15">15</option>
-							<option value="16">16</option>
-							<option value="17">17</option>
-							<option value="18">18</option>
-							<option value="19">19</option>
-							<option value="20">20</option>
-							<option value="21">21</option>
-							<option value="22">22</option>
-							<option value="23">23</option>
-							<option value="24">24</option>
-						</select>
+						<p>
+							Ora Spegnimento
+							<div class="btn-group btn-group-xs" role="group" aria-label="...">
+								<button type="button" class="btn btn-primary" id="off1">1</button>
+								<button type="button" class="btn btn-primary" id="off2">2</button>
+								<button type="button" class="btn btn-primary" id="off3">3</button>
+								<button type="button" class="btn btn-primary" id="off4">4</button>
+								<button type="button" class="btn btn-primary" id="off5">5</button>
+								<button type="button" class="btn btn-primary" id="off6">6</button>
+								<button type="button" class="btn btn-primary" id="off7">7</button>
+								<button type="button" class="btn btn-primary" id="off8">8</button>
+								<button type="button" class="btn btn-primary" id="off9">9</button>
+								<button type="button" class="btn btn-primary" id="off10">10</button>
+								<button type="button" class="btn btn-primary" id="off11">11</button>
+								<button type="button" class="btn btn-primary" id="off12">12</button>
+								<button type="button" class="btn btn-primary" id="off13">13</button>
+								<button type="button" class="btn btn-primary" id="off14">14</button>
+								<button type="button" class="btn btn-primary" id="off15">15</button>
+								<button type="button" class="btn btn-primary" id="off16">16</button>
+								<button type="button" class="btn btn-primary" id="off17">17</button>
+								<button type="button" class="btn btn-primary" id="off18">18</button>
+								<button type="button" class="btn btn-primary" id="off19">19</button>
+								<button type="button" class="btn btn-primary" id="off20">20</button>
+								<button type="button" class="btn btn-primary" id="off21">21</button>
+								<button type="button" class="btn btn-primary" id="off22">22</button>
+								<button type="button" class="btn btn-primary" id="off23">23</button>
+								<button type="button" class="btn btn-primary" id="off24">24</button>
+							</div>
+						</p>
 					</div>
 				</div>
 			</div>
