finita gestione pompa - sito funzionante

--- a/index.html
+++ b/index.html
@@ -158,9 +158,12 @@
 					</div>
 					<br>
 					<div>
-						Ciclo Accensione/Spegnimento <br />
-						Accensione: <input type="text" value="" id="accensionePompa"/> <br />
-						Spegnimento. <input type="text" value="" id="spegnimentoPompa"/>
+						<p id="accensionePompa">
+						
+						</p>
+						<p id="spegnimentoPompa">
+						
+						</p>
 					</div>
 					<div>
 						 <p id="sensoreLivello"></p>
