--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						</p>						
 					</div>
 					<div>
-						<p>
+						<p id="piccolo">
 							Ora Spegnimento
 							<div class="btn-group btn-group-xs" role="group" aria-label="...">
 								<button type="button" class="btn btn-primary" id="off1">1</button>
@@ -166,7 +166,15 @@
 						</p>
 					</div>
 					<div>
-						 <p id="sensoreLivello"></p>
+					</div>
+					<p>
+						livello acqua:
+					</p>
+					 <div class="progress">
+						<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0"
+							aria-valuemin="0" aria-valuemax="100" style="width:0%" id="sensoreLivello">
+						
+						</div>
 					</div>
 				</div>	
 			</div>	
