non ho idea di cosa sia cambiato ma va bene

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container-fluid">
 		<div class="page-header" id="titolo">
 			
-			     <h1> @romatic control panel </h1>
+			     <h1> Aromatic control panel </h1>
 			 
 		</div>
    
@@ -94,7 +94,7 @@
 						</p>						
 					</div>
 					<div>
-						<p id="piccolo">
+						<p>
 							Ora Spegnimento
 							<div class="btn-group btn-group-xs" role="group" aria-label="...">
 								<button type="button" class="btn btn-primary" id="off1">1</button>
