--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   
-	<div class="modal fade" id="myModal">
+	<div class="modal fade" id="login">
 		
 		<div class="modal-dialog">
 		<div class="modal-content" id="popup">
@@ -33,7 +33,76 @@
 						</div>
 		</div>
 		<div class="modal-footer">
+			<button type="button" class="btn btn-primary" id="openRegistration" data-dismiss="modal"> Registrati </button>
 			<button type="button" class="btn btn-primary" id="submit" data-dismiss="modal"> Login </button>
+		</div>
+		</div>
+		</div>
+	</div>
+	
+	
+	<div class="modal fade" id="register">
+		
+		<div class="modal-dialog">
+		<div class="modal-content" id="popup">
+		<div class="modal-header">
+			<h3>Aromatic - Registrazione</h3>
+		</div>
+		<div class="modal-body">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci nome utente </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<input type="email" class="form-control" id="Email" placeholder="es: pippo"> 
+							</div>
+						</div>
+						<br>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci Email </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<input type="email" class="form-control" id="Email" placeholder="Inserisci email"> 
+							</div>
+						</div>
+						<br>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci Password </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+							</div>
+						</div>
+						<br>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Conferma Password </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+							</div>
+						</div>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-primary" id="apriLogin" data-dismiss="modal"> Annulla </button>
+			<button type="button" class="btn btn-primary" id="sendRegistration" data-dismiss="modal"> Registrati </button>
+		</div>
+		</div>
+		</div>
+	</div>
+	
+	
+	<div class="modal fade" id="successRegistration">
+		
+		<div class="modal-dialog">
+		<div class="modal-content" id="popup">
+		<div class="modal-header">
+			<h3>Benvenuto!</h3>
+		</div>
+		<div class="modal-body">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centra"> Registrazione effettuata! </div>
+							<br>
+						<br>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-primary" id="apriLogin2" data-dismiss="modal"> vai al login </button>
 		</div>
 		</div>
 		</div>
@@ -44,7 +113,7 @@
 		
 		<div class="page-header" id="titolo">
 			
-			     <h1> Aromatic Menu </h1>
+			     <h1> Aromatic - (nome utente) </h1>
 			 
 		</div>
 		
