--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
   <head>
     <meta charset="utf-8">    
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
   </head>
   <body>
   
-	<div class="modal fade" id="login">
+	<div class="modal fade" id="login" data-backdrop="static" data-keyboard="false">
 		
 		<div class="modal-dialog">
 		<div class="modal-content" id="popup">
@@ -28,20 +28,20 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci Password </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
-								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+								<input type="password" class="form-control" id="passwordUtente" placeholder="Password">
 							</div>
 						</div>
 		</div>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-primary" id="openRegistration" data-dismiss="modal"> Registrati </button>
-			<button type="button" class="btn btn-primary" id="submit" data-dismiss="modal"> Login </button>
+			<button type="button" class="btn btn-primary" id="loginUtente" data-dismiss="modal"> Login </button>
 		</div>
 		</div>
 		</div>
 	</div>
 	
 	
-	<div class="modal fade" id="register">
+	<div class="modal fade" id="register" data-backdrop="static" data-keyboard="false">
 		
 		<div class="modal-dialog">
 		<div class="modal-content" id="popup">
@@ -89,7 +89,7 @@
 	</div>
 	
 	
-	<div class="modal fade" id="successRegistration">
+	<div class="modal fade" id="successRegistration" data-backdrop="static" data-keyboard="false">
 		
 		<div class="modal-dialog">
 		<div class="modal-content" id="popup">
