--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-primary" id="openRegistration" data-dismiss="modal"> Registrati </button>
-			<button type="button" class="btn btn-primary" id="loginUtente" data-dismiss="modal"> Login </button>
+			<button type="button" class="btn btn-primary" id="loginUtente"> Login </button>
 		</div>
 		</div>
 		</div>
