messa a post la registrazione

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci nome utente </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
-								<input type="email" class="form-control" id="Email" placeholder="es: pippo"> 
+								<input type="email" class="form-control" id="nomeUtente" placeholder="es: pippo"> 
 							</div>
 						</div>
 						<br>
@@ -60,7 +60,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci Email </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
-								<input type="email" class="form-control" id="Email" placeholder="Inserisci email"> 
+								<input type="email" class="form-control" id="emailRegistrazione" placeholder="Inserisci email"> 
 							</div>
 						</div>
 						<br>
@@ -68,7 +68,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci Password </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
-								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+								<input type="password" class="form-control" id="passwordRegistrazione" placeholder="Password">
 							</div>
 						</div>
 						<br>
@@ -76,13 +76,13 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Conferma Password </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
-								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+								<input type="password" class="form-control" id="confermaPasswordRegistrazione" placeholder="Password">
 							</div>
 						</div>
 		</div>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-primary" id="apriLogin" data-dismiss="modal"> Annulla </button>
-			<button type="button" class="btn btn-primary" id="sendRegistration" data-dismiss="modal"> Registrati </button>
+			<button type="button" class="btn btn-primary" id="sendRegistration" > Registrati </button>
 		</div>
 		</div>
 		</div>
@@ -113,7 +113,7 @@
 		
 		<div class="page-header" id="titolo">
 			
-			     <h1> Aromatic - (nome utente) </h1>
+			     <h1 id="titoloVero"> Aromatic - (nome utente) </h1>
 			 
 		</div>
 		
