--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 	
 	<div class="modal fade" id="successRegistration" data-backdrop="static" data-keyboard="false">
 		
+		
 		<div class="modal-dialog">
 		<div class="modal-content" id="popup">
 		<div class="modal-header">
@@ -107,6 +108,34 @@
 		</div>
 		</div>
 	</div>
+	
+	<div class="modal fade" id="modalPrototipo" data-backdrop="static" data-keyboard="false">
+		
+		<div class="modal-dialog">
+		<div class="modal-content" id="popup">
+		<div class="modal-header">
+			<h3>Aromatic - Aggiunta Prototipo</h3>
+		</div>
+		<div class="modal-body">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Inserisci id </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<input type="text" class="form-control" id="idPrototipo" placeholder="Inserisci id"> 
+							</div>
+						</div>
+						<br>
+						<br>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-primary" data-dismiss="modal"> Annulla </button>
+			<button type="button" class="btn btn-primary" id="aggiungiPrototipo"> Aggiungi </button>
+		</div>
+		</div>
+		</div>
+	</div>
+	
+	
+	
 	
 	<div class="container-fluid">
 		
