aggiunta selezione prototipo

--- a/index.html
+++ b/index.html
@@ -134,6 +134,35 @@
 		</div>
 	</div>
 	
+	<div class="modal fade" id="modalSelezionePrototipo" data-backdrop="static" data-keyboard="false">
+		
+		<div class="modal-dialog">
+		<div class="modal-content" id="popup">
+		<div class="modal-header">
+			<h3>Aromatic - Selezione Prototipo</h3>
+		</div>
+		<div class="modal-body">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Prototipo 1 </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<button type="button" class="btn btn-primary" id="firstPrototipo">  Seleziona </button>
+							</div>
+						</div>
+						<br>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Prototipo 2 </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<button type="button" class="btn btn-primary" id="secondPrototipo">  Seleziona </button>
+							</div>
+						</div>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-primary" data-dismiss="modal"> Annulla </button>
+		</div>
+		</div>
+		</div>
+	</div>
 	
 	
 	
