aggiunti id ai label dei 2 prototipi

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		</div>
 		<div class="modal-body">
 						<div class="row">
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Prototipo 1 </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra" id="labelPrototipo1"> Prototipo 1 </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
 								<button type="button" class="btn btn-primary" id="firstPrototipo">  Seleziona </button>
 							</div>
@@ -151,7 +151,7 @@
 						<br>
 						<br>
 						<div class="row">
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> Prototipo 2 </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra" id="labelPrototipo2"> Prototipo 2 </div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
 								<button type="button" class="btn btn-primary" id="secondPrototipo">  Seleziona </button>
 							</div>
