--- a/index.html
+++ b/index.html
@@ -164,6 +164,45 @@
 		</div>
 	</div>
 	
+	<div class="modal fade" id="modalProfilo" data-backdrop="static" data-keyboard="false">
+		
+		<div class="modal-dialog">
+		<div class="modal-content" id="popup">
+		<div class="modal-header">
+			<h3>Aromatic - Profilo</h3>
+		</div>
+		<div class="modal-body">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra" id="labelNomeUtente"> nome utente:  </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<button type="button" class="btn btn-primary" id="modificaNomeUtente">  modifica  </button>
+							</div>
+						</div>
+						<br>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra" id="labelEmail"> Email:  </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<button type="button" class="btn btn-primary" id="modificaEmail">  modifica  </button>
+							</div>
+						</div>
+						<br>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra" id="labelPassword"> Modifica Password  </div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 centra"> 
+								<button type="button" class="btn btn-primary" id="modificaPassword">  modifica  </button>
+							</div>
+						</div>
+						<br>
+						<br>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-primary" data-dismiss="modal"> chiudi profilo </button>
+		</div>
+		</div>
+		</div>
+	</div>
 	
 	
 	<div class="container-fluid">
