Messo logo nella pagina principale

--- a/Panel.html
+++ b/Panel.html
@@ -53,6 +53,7 @@
 			     <h1> Aromatic control panel </h1>
 			 
 		</div>
+        <!-- LOGO-->
         <div class="row" id="Div_Logo">
             <div class="col-md-12 col-lg-12 col-md-12 col-sm-12">
                 <div id="Logo">
@@ -60,6 +61,8 @@
                </div>
             </div>
         </div>
+
+        <!-- FINE LOGO-->
         <div class="row">
             
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" > 
