--- a/index.html
+++ b/index.html
@@ -213,7 +213,16 @@
 			     <h1 id="titoloVero"> Aromatic - (nome utente) </h1>
 			 
 		</div>
-		
+        <!-- LOGO-->
+        <div class="row" id="Div_Logo">
+            <div class="col-md-12 col-lg-12 col-md-12 col-sm-12">
+                <div id="LogoIndex">
+                    <img src="immagini/logo_circolare.jpg" />
+                </div>
+            </div>
+        </div>
+
+        <!-- FINE LOGO-->
 		
 		<div class="row">
 			<div class="flip col-lg-6 col-md-6 col-sm-12 col-xs-12" id="addRasp"> 
